# x402-llm-utils

./: .gitignore  Cargo.toml  README.md
apps/web/: package.json
apps/web/src/pages/: index.tsx
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/escrow/tests/: integration.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/registry/tests/: integration.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
indexer/: package.json  schema.sql
indexer/src/: index.ts
scripts/: deploy.sh
